--- a/_posts/2012-11-27-Codejo-2.md
+++ b/_posts/2012-11-27-Codejo-2.md
@@ -1,6 +1,7 @@
-For the second Codejo, we'll be looking again at the Tennis Game Kata in Ruby.  
-This time we'll focus on Test Driven Development, following the stages:
-Red - failing test
-Green - make test pass as simply as possible
-Refactor - improve and clarify the code
-Ruby download instructions can be found here.
+For the second Codejo, we'll be looking again at the [Tennis Game Kata](kata/TennisGame/) in Ruby.  This time we'll focus on Test Driven Development, following the stages:
+
+* Red - failing test
+* Green - make test pass as simply as possible
+* Refactor - improve and clarify the code
+
+Ruby download instructions can be found [here](https://www.ruby-lang.org/en/downloads/).
